---
title: Package server
config:
  themeCSS: |
    .active rect {
      outline: 1.5px solid #9370DB;
      outline-offset: 3px;
    }
---
classDiagram
    namespace server {
        class MultiServer
        class ServerOneClient
        class UnknownValueException
    }
    class MultiServer {
        - PORT: int = 8080
        + MultiServer(in port: int)
        - run()
    }

    class ServerOneClient:::active {
        - socket: Socket
        - in: ObjectInputStream
        - out: ObjectOutputStream
        + ServerOneClient(in s: Socket)
        + run()
    }

    class UnknownValueException{
        + UnknownValueException(in message: String)
    }

    class Thread{
    }

    class IOException{
    }

    class DbAccess{
    }

    ServerOneClient --|> Thread
    ServerOneClient ..> UnknownValueException
    ServerOneClient ..> IOException
    ServerOneClient ..> DbAccess
    MultiServer ..> ServerOneClient
    UnknownValueException --|> Exception

